Added possibility to read config from file

--- a/wmtempnv/Makefile
+++ b/wmtempnv/Makefile
@@ -9,7 +9,7 @@ OBJ = $(SRC:.c=.o)
 
 CFLAGS = -Wall -O3
 
-LIB = -I/usr/include/NVCtrl/ -L/usr/X11R6/lib -lXpm -lXext -lX11 -lsensors -lXNVCtrl
+LIB = -L/usr/X11R6/lib -lXpm -lXext -lX11
 
 INSTALL = /usr/bin/install
 
@@ -19,7 +19,7 @@ all: $(OBJ)
 	$(CC) $(CFLAGS) -o $(EXE) $(OBJ) $(LIB)
 	strip $(EXE)
 
-$(OBJ): %.o : %.c 
+$(OBJ): %.o : %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
